meangame mongodb with CRD

--- a/MEANGAME/.env
+++ b/MEANGAME/.env
@@ -1,3 +1,6 @@
 PORT = 3000
 SERVER_RUNNING_ON_MSG = "Server running on port"
 PUBLIC_DIR = "public"
+
+DB_URL = "mongodb://localhost:27017/meanGames"
+DB_NAME = "meanGames"
