meangame mongoose schema publisher review crud wip

--- a/MEANGAME/.env
+++ b/MEANGAME/.env
@@ -7,3 +7,11 @@ DB_NAME = "meanGames"
 
 GAME_MODEL = "Game"
 GAME_COLLECTION = "games"
+
+SERVER_RUNNING_ON_MSG = "Server running on port"
+MSG_DB_CONNECTED = "Database connected"
+MSG_DB_DISCONNECTED = "Database disconnected"
+MSG_DB_ERROR = "Database error"
+MSG_GAME_ID_REQUIRED = "Game ID required"
+MSG_PUBLISHER_ID_REQUIRED = "Publisher ID required"
+MSG_REVIEW_ID_REQUIRED = "Review ID required"
