--- a/MEANGAME/.env
+++ b/MEANGAME/.env
@@ -15,3 +15,6 @@ MSG_DB_ERROR = "Database error"
 MSG_GAME_ID_REQUIRED = "Game ID required"
 MSG_PUBLISHER_ID_REQUIRED = "Publisher ID required"
 MSG_REVIEW_ID_REQUIRED = "Review ID required"
+
+GEO_SEARCH_MAX_DIST = 10000000
+GEO_SEARCH_MIN_DIST = 0
