--- a/MEANGAME/.env
+++ b/MEANGAME/.env
@@ -7,6 +7,8 @@ DB_NAME = "meanGames"
 
 GAME_MODEL = "Game"
 GAME_COLLECTION = "games"
+USER_MODEL = "user"
+USER_COLLECTION = "users"
 
 SERVER_RUNNING_ON_MSG = "Server running on port"
 MSG_DB_CONNECTED = "Database connected"
