--- a/MEANGAME/package.json
+++ b/MEANGAME/package.json
@@ -14,6 +14,7 @@
   "author": "Nega",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mongodb": "^4.4.1",
